@@ -140,21 +140,21 @@ public abstract class CIMethod extends SimulationMethod
 		//double stddev = Math.sqrt(variance);
 		switch (prOp) {
 		case 0: // 0=quantitative
-			return new Double(mean);
+			return Double.valueOf(mean);
 			//return new prism.Interval(mean - stddev, mean + stddev);
-			//return new Double(stddev / mean); // noise
+			//return Double.valueOf(stddev / mean); // noise
 		case -1: // -1=lower bound
 			if (mean >= theta + width)
-				return new Boolean(true);
+				return Boolean.valueOf(true);
 			else if (mean <= theta - width)
-				return new Boolean(false);
+				return Boolean.valueOf(false);
 			else
 				throw new PrismException("Approximation is not precise enough to get a result");
 		case 1: // 1=upper bound
 			if (mean >= theta + width)
-				return new Boolean(false);
+				return Boolean.valueOf(false);
 			else if (mean <= theta - width)
-				return new Boolean(true);
+				return Boolean.valueOf(true);
 			else
 				throw new PrismException("Approximation is not precise enough to get a result");
 		default:
