@@ -104,7 +104,7 @@ public class GUIFileMenu extends GUIPlugin
         };
         exitAction.putValue(Action.LONG_DESCRIPTION, "Exits the application");
         //exitAction.putValue(Action.SHORT_DESCRIPTION, "Exit");
-        exitAction.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_X));
+        exitAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_X));
         exitAction.putValue(Action.NAME, "Exit");
         exitAction.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallExit.png"));
         exitAction.putValue(Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_Q, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
