@@ -45,37 +45,37 @@ public class GUILogEvent extends GUIEvent
     
     public GUILogEvent(int type, int message)
     {
-        super(type, new Integer(message));
+        super(type, Integer.valueOf(message));
     }
     
     public GUILogEvent(int type, double message)
     {
-        super(type, new Double(message));
+        super(type, Double.valueOf(message));
     }
     
     public GUILogEvent(int type, float message)
     {
-        super(type, new Float(message));
+        super(type, Float.valueOf(message));
     }
     
     public GUILogEvent(int type, long message)
     {
-        super(type, new Long(message));
+        super(type, Long.valueOf(message));
     }
     
     public GUILogEvent(int type, short message)
     {
-        super(type, new Short(message));
+        super(type, Short.valueOf(message));
     }
     
     public GUILogEvent(int type, byte message)
     {
-        super(type, new Byte(message));
+        super(type, Byte.valueOf(message));
     }
     
     public GUILogEvent(int type, boolean message)
     {
-        super(type, new Boolean(message));
+        super(type, Boolean.valueOf(message));
     }
     
     public GUILogEvent(Object message)
@@ -85,36 +85,36 @@ public class GUILogEvent extends GUIEvent
     
     public GUILogEvent(int message)
     {
-        this(PRINTLN, new Integer(message));
+        this(PRINTLN, Integer.valueOf(message));
     }
     
     public GUILogEvent(double message)
     {
-        this(PRINTLN, new Double(message));
+        this(PRINTLN, Double.valueOf(message));
     }
     
     public GUILogEvent(float message)
     {
-        this(PRINTLN, new Float(message));
+        this(PRINTLN, Float.valueOf(message));
     }
     
     public GUILogEvent(long message)
     {
-        this(PRINTLN, new Long(message));
+        this(PRINTLN, Long.valueOf(message));
     }
     
     public GUILogEvent(short message)
     {
-        this(PRINTLN, new Short(message));
+        this(PRINTLN, Short.valueOf(message));
     }
     
     public GUILogEvent(byte message)
     {
-        this(PRINTLN, new Byte(message));
+        this(PRINTLN, Byte.valueOf(message));
     }
     
     public GUILogEvent(boolean message)
     {
-        this(PRINTLN, new Boolean(message));
+        this(PRINTLN, Boolean.valueOf(message));
     }
 }
